[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = "1.12.0"
axum = "0.7.2"
futures = { version = "0.3.29", features = ['executor', 'thread-pool']}
futures-time = "3.0.0"
http = "1.0.0"
parking_lot = "0.12.1"
regex = "=1.7.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.108"
url = "2.2"
